# sqlalchemy-annotations

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml
sqlalchemy_annotations/: __init__.py  _enums.py
tests/: annotations.py  conftest.py  db.py  test_booleans.py  test_dates.py  test_numbers.py  test_strings.py  test_uuids.py
