[project]
name = "sqlalchemy-annotations"
version = "0.0.1"
description = "Table column annotations for SQLAlchemy 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy==2.*",
]


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]


[tool.ruff]
line-length = 120
indent-width = 4


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q000", "Q003", "COM812", "D100", "D104", "D105", "D106", "D107", "D401"]


[tool.ruff.lint.pydocstyle]
convention = "google"
